# altinn-app-insight

./: .env  .gitignore  Makefile  README.md  analyze.py  clear_state.py  download.py  key.template.json  keys.template.json  pyproject.toml  test.py
.ipython/profile_default/: ipython_config.json
.ipython/profile_default/startup/: 00-setup.ipy
.jupyter/: jupyter_server_config.json  jupyter_server_config.py
.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: diagnostics.jupyterlab-settings
.jupyter/lab/user-settings/@jupyter-widgets/jupyterlab-manager/: plugin.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: notification.jupyterlab-settings  themes.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/completer-extension/: manager.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
.jupyter/lab/user-settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
notebooks/: application_metadata.ipynb  appsettings.ipynb  components.ipynb  cs.ipynb  cs_lang.ipynb  dockerfile.ipynb  download.ipynb  index_cshtml.ipynb  policy.ipynb  process.ipynb  program_cs.ipynb  rule_handler.ipynb  text_resources.ipynb  version.ipynb
notebooks/.virtual_documents/: application_metadata.ipynb
package/: __init__.py  apps.py  code.py  context.py  cs.py  cs_lang.py  download.py  html.py  html_output.py  iter.py  json.py  layout.py  layout_sets.py  plotting.py  repo.py  text.py  utils.py  version.py  xml.py
typings/: __builtins__.pyi
