[project]
name = "altinn-app-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "ipympl>=0.9.6",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]

[tool.black]
line-length = 140
