[project]
name = "altinn-app-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "ipympl>=0.9.6",
    "jq>=1.8.0",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "python-rapidjson>=1.20",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-javascript>=0.23.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-lsp>=5.1.0",
    "pyright[nodejs]>=1.1.396",
]

[tool.setuptools.packages.find]
include = ["package"]

[tool.black]
line-length = 120

