[project]
name = "altinn-app-insight"
version = "0.1.0"
description = "Query Altinn app configurations in tt02 and prod"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "elementpath>=5.0.1",
    "httpx[http2]>=0.28.1",
    "ipympl>=0.9.6",
    "jq>=1.8.0",
    "jupyterlab>=4.3.5",
    "lxml>=5.4.0",
    "lxml-stubs>=0.5.1",
    "matplotlib>=3.10.0",
    "python-rapidjson>=1.20",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-javascript>=0.23.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-lsp>=5.1.0",
    "pyright[nodejs]>=1.1.396",
]

[tool.setuptools.packages.find]
include = ["package"]

[tool.black]
line-length = 120

